Changed to point to temp location